--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --open",
     "build": "ng build",
+    "build:prod": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "format-ts": "prettier --write \"src/**/*.ts\" --config \".prettierrc-ts.json\"",
+    "format-less": "prettier --write \"src/**/*.less\" --config \".prettierrc-less.json\"",
+    "format-html": "prettier --write \"src/**/*.html\" --config \".prettierrc-html.json\"",
+    "format": "npm run format-ts && npm run format-less && npm run format-html"
   },
   "private": true,
   "dependencies": {
@@ -34,6 +39,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "prettier": "^2.8.1",
     "typescript": "~4.7.2"
   }
 }
