--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -29,7 +29,7 @@ http {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
     server_names_hash_bucket_size 64;
     server {
-        server_name liquidator.orbiterdev.one;
+        server_name liquidator.orbiter.one;
         listen 80;
 
         expires 0;
@@ -40,30 +40,19 @@ http {
             if_modified_since off;
             expires off;
             etag off;
-            root /usr/share/nginx/app/dist/orbiter-liquidator-cabinet;
+            root /usr/share/nginx/app;
             try_files $uri $uri/ /index.html =404;
         }
 
         location ~* \.(ico|css|js|json|ico|gif|jpeg|jpg|png|woff|ttf|otf|svg|woff2|eot)$ {
-            root /usr/share/nginx/app/dist/orbiter-liquidator-cabinet;
+            root /usr/share/nginx/app;
             access_log off;
             expires 1y;
         }
 
         location /robots.txt {
             add_header Content-Type text/plain;
-            return 200 "User-agent: *\nDisallow: /\n";
-        }
-
-        error_page 403 404 500 501 502 503 504 /error.html;
-
-        location = /error.html {
-            try_files error.html @error;
-            internal;
-        }
-
-        location @error {
-            root /usr/share/nginx/app;
+            return 200 "User-agent: *\nAllow: /\n";
         }
 
         error_log /var/log/nginx/app_error.log;
