--- a/package.json
+++ b/package.json
@@ -1,49 +1,43 @@
 {
   "name": "orbiter-liquidator-cabinet",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve --open",
-    "build": "ng build",
-    "build:prod": "ng build --configuration production",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "prettier": "npm run prettier:ts && npm run prettier:less && npm run prettier:html",
-    "prettier:ts": "prettier --check \"src/**/*.ts\" --config \".prettierrc-ts.json\"",
-    "prettier:less": "prettier --check \"src/**/*.less\" --config \".prettierrc-less.json\"",
-    "prettier:html": "prettier --check \"src/**/*.html\" --config \".prettierrc-html.json\"",
-    "prettier:fix": "npm run prettier:ts:fix && npm run prettier:less:fix && npm run prettier:html:fix",
-    "prettier:ts:fix": "prettier --write \"src/**/*.ts\" --config \".prettierrc-ts.json\"",
-    "prettier:less:fix": "prettier --write \"src/**/*.less\" --config \".prettierrc-less.json\"",
-    "prettier:html:fix": "prettier --write \"src/**/*.html\" --config \".prettierrc-html.json\""
-  },
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.1.0",
-    "@angular/common": "^14.1.0",
-    "@angular/compiler": "^14.1.0",
-    "@angular/core": "^14.1.0",
-    "@angular/forms": "^14.1.0",
-    "@angular/platform-browser": "^14.1.0",
-    "@angular/platform-browser-dynamic": "^14.1.0",
-    "@angular/router": "^14.1.0",
-    "ng-zorro-antd": "^14.3.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "13.5.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "2.1.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.1.0",
-    "@angular/cli": "~14.1.0",
-    "@angular/compiler-cli": "^14.1.0",
-    "@types/jasmine": "~4.0.0",
-    "jasmine-core": "~4.2.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "prettier": "^2.8.1",
-    "typescript": "~4.7.2"
+    "prettier": "2.7.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "prettier": "prettier --check src",
+    "prettier:fix": "prettier --write --list-different src",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
