--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "@testing-library/user-event": "13.5.0",
     "antd": "5.0.7",
     "env-cmd": "10.1.0",
+    "history": "^5.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-jss": "^10.9.2",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
+    "tsconfig": "^7.0.0",
+    "typescript": "^4.9.4",
     "web-vitals": "2.1.4"
   },
   "devDependencies": {
