--- a/package.json
+++ b/package.json
@@ -3,33 +3,44 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.0.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
+    "@walletconnect/web3-provider": "^1.8.0",
     "antd": "5.0.7",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
     "env-cmd": "10.1.0",
     "history": "^5.3.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-jss": "^10.9.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tsconfig": "^7.0.0",
     "typescript": "^4.9.4",
-    "web-vitals": "2.1.4"
+    "url": "^0.11.0",
+    "web-vitals": "2.1.4",
+    "web3": "^1.8.1",
+    "web3modal": "^1.9.10"
   },
   "devDependencies": {
     "prettier": "2.7.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "build:production": "env-cmd -f .env.production react-scripts build",
+    "start": "craco start",
+    "build": "craco build",
+    "build:production": "env-cmd -f .env.production craco build",
     "prettier": "prettier --check src",
     "prettier:fix": "prettier --write --list-different src",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "craco test",
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": [
