--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
     "antd": "5.0.7",
+    "axios": "^1.2.1",
+    "bignumber.js": "^9.1.1",
     "env-cmd": "10.1.0",
     "history": "^5.3.0",
     "react": "18.2.0",
