--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.2.1",
     "bignumber.js": "^9.1.1",
     "env-cmd": "10.1.0",
+    "evm-bn": "^1.1.2",
     "history": "^5.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
