--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "@testing-library/user-event": "13.5.0",
     "@walletconnect/web3-provider": "^1.8.0",
     "antd": "5.0.7",
+    "assert": "^2.0.0",
     "axios": "^1.2.1",
     "bignumber.js": "^9.1.1",
-    "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "env-cmd": "10.1.0",
     "evm-bn": "^1.1.2",
     "history": "^5.3.0",
     "https-browserify": "^1.0.0",
+    "js-big-decimal": "^1.3.15",
     "os-browserify": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
