--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -47,4 +47,4 @@ jobs:
             echo REACT_APP_X_ORBITER_LIQUIDATOR_API_URL=${{ secrets.REACT_APP_X_ORBITER_LIQUIDATOR_API_URL_DEV }} >> .env.production
 
             export DOCKER_SCAN_SUGGEST=false
-            docker compose -f docker-compose.prod.yml up -d --build
+            docker compose -f docker-stack.yml up -d --build
