Update CI/CD configuration

--- a/nginx.stage.conf
+++ b/nginx.stage.conf
@@ -29,7 +29,7 @@ http {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
     server_names_hash_bucket_size 64;
     server {
-        server_name demo-liquidator.orbiterdev.one;
+        server_name liquidator.orbiterdev.one;
         listen 80;
 
         expires 0;
