--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_X_ORBITER_LIQUIDATOR_API_KEY=25340c9d-82f4-48ce-86fd-2f9b6f46df32
-REACT_APP_X_ORBITER_LIQUIDATOR_API_URL=https://api.orbiterdev.one/api
+REACT_APP_X_ORBITER_LIQUIDATOR_API_URL=https://demo-api.orbiterdev.one/api
 REACT_APP_X_ORBITER_CHAIN_ID=1287
